<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <ImageView
        android:id="@+id/iv_restaurant_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/restaurant_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/tavern" />

    <TextView
        android:id="@+id/tv_restaurant_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_restaurant_image"
        tools:text="@string/dummy_restaurant_name" />

    <TextView
        android:id="@+id/tv_restaurant_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_restaurant_name"
        app:layout_constraintStart_toStartOf="@+id/tv_restaurant_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_name"
        tools:text="@string/dummy_restaurant_description" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/write_your_review"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_restaurant_description"
        app:layout_constraintStart_toStartOf="@+id/tv_restaurant_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_review_hint"
        app:layout_constraintEnd_toStartOf="@+id/btn_send_review"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_restaurant_review"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send_review"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_restaurant_reviews"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:listitem="@layout/item_review" />

</androidx.constraintlayout.widget.ConstraintLayout>