<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:elevation="0dp"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/item_iv_restaurant_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/restaurant_image"
                android:scaleType="centerCrop"
                android:src="@drawable/tavern" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/item_tv_restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/dummy_restaurant_name" />

        <TextView
            android:id="@+id/item_tv_restaurant_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:paddingHorizontal="16dp"
            tools:text="@string/dummy_restaurant_description" />

    </LinearLayout>

</androidx.cardview.widget.CardView>